eliminate dash before image file to make images appear

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="box">
-        <img class="diamond" src="/images/image-equilibrium.jpg" alt="diamond" width="280" height="280">
+        <img class="diamond" src="images/image-equilibrium.jpg" alt="diamond" width="280" height="280">
         <h3>Equilibrium #3429</h3>
         <p>Our Equilibrium collection promotes balance and calm.</p>
          
@@ -21,7 +21,7 @@
 <hr>
          <div>
             
-            <h4><img class="avatar" src="/images/image-avatar.png" alt="avatar" width="23" height="23"> Creation of <span> Jules Wyvern </span></h4>
+            <h4><img class="avatar" src="images/image-avatar.png" alt="avatar" width="23" height="23"> Creation of <span> Jules Wyvern </span></h4>
          </div>
     </div>
 </body>
